Resolved Manifest conflict

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,14 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".login">
-        <activity android:name=".MainActivity" />
+
+
         <activity android:name=".login"></activity>
         <activity android:name=".otpverification">
         </activity>
-        <activity android:name=".usertypecheck">
+        <activity android:name=".usertypecheck"></activity>
 
-        </activity>
+
     </application>
 
 </manifest>
