--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name=".Parenty"
@@ -18,14 +18,14 @@
         <!-- Sandesh -->
         <service android:name=".GeoLocationService" />
 
-        <receiver android:name=".GeoLocationListener"></receiver>
+        <receiver android:name=".GeoLocationListener" />
         <receiver android:name=".StartTrackingAtBoot">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
 
         <!-- Vineeth -->
         <activity android:name=".Login">
@@ -50,8 +50,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MapsActivity"></activity>
-        <activity android:name=".Registration"></activity>
+        <activity android:name=".MapsActivity" />
+        <activity android:name=".Registration" />
+        <activity android:name=".DashBoard"></activity>
     </application>
 
 </manifest>
